@@ -17,12 +17,11 @@
 package org.apache.solr.cli;
 
 import java.io.IOException;
-import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.FileOwnerAttributeView;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
@@ -144,12 +143,8 @@ public class AssertTool extends ToolBase {
           .longOpt("exitcode")
           .build();
 
-  public AssertTool() {
-    this(CLIO.getOutStream());
-  }
-
-  public AssertTool(PrintStream stdout) {
-    super(stdout);
+  public AssertTool(ToolRuntime runtime) {
+    super(runtime);
   }
 
   @Override
@@ -262,8 +257,8 @@ public class AssertTool extends ToolBase {
     return ret;
   }
 
-  public static int assertSolrRunning(String url, String credentials) throws Exception {
-    StatusTool status = new StatusTool();
+  public int assertSolrRunning(String url, String credentials) throws Exception {
+    StatusTool status = new StatusTool(runtime);
     try {
       status.waitToSeeSolrUp(url, credentials, timeoutMs, TimeUnit.MILLISECONDS);
     } catch (Exception se) {
@@ -280,13 +275,13 @@ public class AssertTool extends ToolBase {
     return 0;
   }
 
-  public static int assertSolrNotRunning(String url, String credentials) throws Exception {
-    StatusTool status = new StatusTool();
+  public int assertSolrNotRunning(String url, String credentials) throws Exception {
+    StatusTool status = new StatusTool(runtime);
     long timeout =
         System.nanoTime() + TimeUnit.NANOSECONDS.convert(timeoutMs, TimeUnit.MILLISECONDS);
     try (SolrClient solrClient = CLIUtils.getSolrClient(url, credentials)) {
       NamedList<Object> response = solrClient.request(new HealthCheckRequest());
-      Integer statusCode = (Integer) response.findRecursive("responseHeader", "status");
+      Integer statusCode = (Integer) response._get(List.of("responseHeader", "status"), null);
       CLIUtils.checkCodeForAuthError(statusCode);
     } catch (IOException | SolrServerException e) {
       log.debug("Opening connection to {} failed, Solr does not seem to be running", url, e);
@@ -316,7 +311,7 @@ public class AssertTool extends ToolBase {
             + " seconds");
   }
 
-  public static int assertSolrRunningInCloudMode(String url, String credentials) throws Exception {
+  public int assertSolrRunningInCloudMode(String url, String credentials) throws Exception {
     if (!isSolrRunningOn(url, credentials)) {
       return exitOrException(
           "Solr is not running on url "
@@ -332,8 +327,7 @@ public class AssertTool extends ToolBase {
     return 0;
   }
 
-  public static int assertSolrNotRunningInCloudMode(String url, String credentials)
-      throws Exception {
+  public int assertSolrNotRunningInCloudMode(String url, String credentials) throws Exception {
     if (!isSolrRunningOn(url, credentials)) {
       return exitOrException(
           "Solr is not running on url "
@@ -350,8 +344,8 @@ public class AssertTool extends ToolBase {
   }
 
   public static int sameUser(String directory) throws Exception {
-    if (Files.exists(Paths.get(directory))) {
-      String userForDir = userForDir(Paths.get(directory));
+    if (Files.exists(Path.of(directory))) {
+      String userForDir = userForDir(Path.of(directory));
       if (!currentUser().equals(userForDir)) {
         return exitOrException("Must run as user " + userForDir + ". We are " + currentUser());
       }
@@ -362,14 +356,14 @@ public class AssertTool extends ToolBase {
   }
 
   public static int assertFileExists(String directory) throws Exception {
-    if (!Files.exists(Paths.get(directory))) {
+    if (!Files.exists(Path.of(directory))) {
       return exitOrException("Directory " + directory + " does not exist.");
     }
     return 0;
   }
 
   public static int assertFileNotExists(String directory) throws Exception {
-    if (Files.exists(Paths.get(directory))) {
+    if (Files.exists(Path.of(directory))) {
       return exitOrException("Directory " + directory + " should not exist.");
     }
     return 0;
@@ -411,8 +405,8 @@ public class AssertTool extends ToolBase {
     }
   }
 
-  private static boolean isSolrRunningOn(String url, String credentials) throws Exception {
-    StatusTool status = new StatusTool();
+  private boolean isSolrRunningOn(String url, String credentials) throws Exception {
+    StatusTool status = new StatusTool(runtime);
     try {
       status.waitToSeeSolrUp(url, credentials, timeoutMs, TimeUnit.MILLISECONDS);
       return true;
