@@ -17,18 +17,15 @@
 package org.apache.solr.cli;
 
 import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.Locale;
-import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.file.PathUtils;
 import org.apache.solr.cli.CommonCLIOptions.DefaultValues;
 import org.apache.solr.client.solrj.SolrClient;
@@ -100,12 +97,8 @@ public class CreateTool extends ToolBase {
           .desc("Configuration name; default is the collection name.")
           .build();
 
-  public CreateTool() {
-    this(CLIO.getOutStream());
-  }
-
-  public CreateTool(PrintStream stdout) {
-    super(stdout);
+  public CreateTool(ToolRuntime runtime) {
+    super(runtime);
   }
 
   @Override
@@ -157,8 +150,8 @@ public class CreateTool extends ToolBase {
         cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
 
     // we allow them to pass a directory instead of a configset name
-    Path configsetDir = Paths.get(confDirName);
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
+    Path configsetDir = Path.of(confDirName);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
 
     if (!Files.isDirectory(configsetDir)) {
       ensureConfDirExists(solrInstallDirPath, configsetDir);
@@ -167,10 +160,9 @@ public class CreateTool extends ToolBase {
 
     String coreRootDirectory; // usually same as solr home, but not always
 
-    Map<String, Object> systemInfo =
-        solrClient
-            .request(new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH))
-            .asMap();
+    NamedList<?> systemInfo =
+        solrClient.request(
+            new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH));
 
     // convert raw JSON into user-friendly output
     coreRootDirectory = (String) systemInfo.get("core_root");
@@ -183,7 +175,7 @@ public class CreateTool extends ToolBase {
               + "' already exists!\nChecked core existence using Core API command");
     }
 
-    Path coreInstanceDir = Paths.get(coreRootDirectory, coreName);
+    Path coreInstanceDir = Path.of(coreRootDirectory, coreName);
     Path confDir = getFullConfDir(solrInstallDirPath, configsetDir).resolve("conf");
     if (!Files.isDirectory(coreInstanceDir)) {
       Files.createDirectories(coreInstanceDir);
@@ -192,7 +184,7 @@ public class CreateTool extends ToolBase {
             "Failed to create new core instance directory: " + coreInstanceDir.toAbsolutePath());
       }
 
-      FileUtils.copyDirectoryToDirectory(confDir.toFile(), coreInstanceDir.toFile());
+      PathUtils.copyDirectory(confDir, coreInstanceDir, StandardCopyOption.COPY_ATTRIBUTES);
 
       echoIfVerbose(
           "\nCopying configuration to new core instance directory:\n"
@@ -239,8 +231,8 @@ public class CreateTool extends ToolBase {
     final String solrInstallDir = System.getProperty("solr.install.dir");
     String confName = cli.getOptionValue(CONF_NAME_OPTION);
     String confDir = cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
-    Path confDirPath = Paths.get(confDir);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
+    Path confDirPath = Path.of(confDir);
     ensureConfDirExists(solrInstallDirPath, confDirPath);
     printDefaultConfigsetWarningIfNecessary(cli);
 
@@ -290,7 +282,7 @@ public class CreateTool extends ToolBase {
               + " to ZooKeeper at "
               + cloudSolrClient.getClusterStateProvider().getQuorumHosts());
       // We will trust the config since we have the Zookeeper Address
-      configSetService.uploadConfig(confName, confPath, true);
+      configSetService.uploadConfig(confName, confPath);
     }
 
     // since creating a collection is a heavy-weight operation, check for existence first
@@ -321,7 +313,7 @@ public class CreateTool extends ToolBase {
     if (isVerbose()) {
       // pretty-print the response to stdout
       CharArr arr = new CharArr();
-      new JSONWriter(arr, 2).write(response.asMap());
+      new JSONWriter(arr, 2).write(response.asMap(10));
       echo(arr.toString());
     }
     String endMessage =
@@ -348,7 +340,7 @@ public class CreateTool extends ToolBase {
       Path fullConfDir = getFullConfDir(solrInstallDir, confDirName);
       if (!Files.isDirectory(fullConfDir)) {
         echo("Specified configuration directory " + confDirName + " not found!");
-        System.exit(1);
+        runtime.exit(1);
       }
     }
   }
