@@ -40,9 +40,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -76,7 +74,6 @@ import org.apache.solr.client.api.model.IndexVersionResponse;
 import org.apache.solr.client.api.model.SolrJerseyResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
-import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
@@ -154,8 +151,6 @@ public class ReplicationHandler extends RequestHandlerBase
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   SolrCore core;
 
-  private volatile boolean closed = false;
-
   @Override
   public Name getPermissionName(AuthorizationContext request) {
     return Name.READ_PERM;
@@ -227,8 +222,6 @@ public class ReplicationHandler extends RequestHandlerBase
   private volatile ScheduledExecutorService executorService;
 
   private volatile long executorStartTime;
-
-  private int numTimesReplicated = 0;
 
   private final Map<String, FileInfo> confFileInfoCache = new HashMap<>();
 
@@ -307,8 +300,7 @@ public class ReplicationHandler extends RequestHandlerBase
     } else if (command.equals(CMD_SHOW_COMMITS)) {
       populateCommitInfo(rsp);
     } else if (command.equals(CMD_DETAILS)) {
-      getReplicationDetails(
-          rsp, getBoolWithBackwardCompatibility(solrParams, "follower", "slave", true));
+      getReplicationDetails(rsp, solrParams.getBool("follower", true));
     } else if (CMD_ENABLE_REPL.equalsIgnoreCase(command)) {
       replicationEnabled.set(true);
       rsp.add(STATUS, OK_STATUS);
@@ -325,8 +317,7 @@ public class ReplicationHandler extends RequestHandlerBase
    * @see IndexFetcher.LocalFsFileFetcher
    * @see IndexFetcher.DirectoryFileFetcher
    */
-  private void getFileStream(SolrParams solrParams, SolrQueryResponse rsp, SolrQueryRequest req)
-      throws IOException {
+  private void getFileStream(SolrParams solrParams, SolrQueryResponse rsp, SolrQueryRequest req) {
     final CoreReplication coreReplicationAPI = new CoreReplication(core, req, rsp);
     String fileName;
     String dirType;
@@ -348,14 +339,6 @@ public class ReplicationHandler extends RequestHandlerBase
       return;
     }
 
-    if (solrParams.getParams(CommonParams.WT) == null) {
-      reportErrorOnResponse(
-          rsp,
-          "Missing wt parameter",
-          new SolrException(SolrException.ErrorCode.BAD_REQUEST, "wt not specified in request"));
-      return;
-    }
-
     coreReplicationAPI.fetchFile(
         fileName,
         dirType,
@@ -365,39 +348,6 @@ public class ReplicationHandler extends RequestHandlerBase
         solrParams.getBool(CHECKSUM, false),
         solrParams.getDouble(MAX_WRITE_PER_SECOND, Double.MAX_VALUE),
         solrParams.getLong(GENERATION));
-  }
-
-  static boolean getBoolWithBackwardCompatibility(
-      SolrParams params, String preferredKey, String alternativeKey, boolean defaultValue) {
-    Boolean value = params.getBool(preferredKey);
-    if (value != null) {
-      return value;
-    }
-    return params.getBool(alternativeKey, defaultValue);
-  }
-
-  @SuppressWarnings("unchecked")
-  static <T> T getObjectWithBackwardCompatibility(
-      SolrParams params, String preferredKey, String alternativeKey, T defaultValue) {
-    Object value = params.get(preferredKey);
-    if (value != null) {
-      return (T) value;
-    }
-    value = params.get(alternativeKey);
-    if (value != null) {
-      return (T) value;
-    }
-    return defaultValue;
-  }
-
-  @SuppressWarnings("unchecked")
-  public static <T> T getObjectWithBackwardCompatibility(
-      NamedList<?> params, String preferredKey, String alternativeKey) {
-    Object value = params.get(preferredKey);
-    if (value != null) {
-      return (T) value;
-    }
-    return (T) params.get(alternativeKey);
   }
 
   private void reportErrorOnResponse(SolrQueryResponse response, String message, Exception e) {
@@ -432,8 +382,7 @@ public class ReplicationHandler extends RequestHandlerBase
 
   private void fetchIndex(SolrParams solrParams, SolrQueryResponse rsp)
       throws InterruptedException {
-    String leaderUrl =
-        getObjectWithBackwardCompatibility(solrParams, LEADER_URL, LEGACY_LEADER_URL, null);
+    String leaderUrl = solrParams.get(LEADER_URL, null);
     if (!isFollower && leaderUrl == null) {
       reportErrorOnResponse(rsp, "No follower configured or no 'leaderUrl' specified", null);
       return;
@@ -500,11 +449,7 @@ public class ReplicationHandler extends RequestHandlerBase
   private volatile IndexFetcher currentIndexFetcher;
 
   public IndexFetchResult doFetch(SolrParams solrParams, boolean forceReplication) {
-    String leaderUrl =
-        solrParams == null
-            ? null
-            : ReplicationHandler.getObjectWithBackwardCompatibility(
-                solrParams, LEADER_URL, LEGACY_LEADER_URL, null);
+    String leaderUrl = solrParams.get(LEADER_URL, null);
     if (!indexFetchLock.tryLock()) return IndexFetchResult.LOCK_OBTAIN_FAILED;
     if (core.getCoreContainer().isShutDown()) {
       log.warn("I was asked to replicate but CoreContainer is shutting down");
@@ -515,7 +460,7 @@ public class ReplicationHandler extends RequestHandlerBase
         if (currentIndexFetcher != null && currentIndexFetcher != pollingIndexFetcher) {
           currentIndexFetcher.destroy();
         }
-        currentIndexFetcher = new IndexFetcher(solrParams.toNamedList(), this, core);
+        currentIndexFetcher = new IndexFetcher(new SimpleOrderedMap<>(solrParams), this, core);
       } else {
         currentIndexFetcher = pollingIndexFetcher;
       }
@@ -568,7 +513,7 @@ public class ReplicationHandler extends RequestHandlerBase
       }
     }
     if ("file".equals(repo.createURI("x").getScheme())) {
-      core.getCoreContainer().assertPathAllowed(Paths.get(location));
+      core.getCoreContainer().assertPathAllowed(Path.of(location));
     }
 
     URI locationUri = repo.createDirectoryURI(location);
@@ -718,7 +663,7 @@ public class ReplicationHandler extends RequestHandlerBase
       }
     }
     if ("file".equals(repo.createURI("x").getScheme())) {
-      core.getCoreContainer().assertPathAllowed(Paths.get(location));
+      core.getCoreContainer().assertPathAllowed(Path.of(location));
     }
 
     // small race here before the commit point is saved
@@ -772,10 +717,14 @@ public class ReplicationHandler extends RequestHandlerBase
     List<FileMetaData> confFiles = new ArrayList<>();
     synchronized (confFileInfoCache) {
       Checksum checksum = null;
-      for (int i = 0; i < nameAndAlias.size(); i++) {
-        String cf = nameAndAlias.getName(i);
+
+      for (Map.Entry<String, String> aliasEntry : nameAndAlias) {
+        String cf = aliasEntry.getKey();
+        String aliasValue = aliasEntry.getValue();
+
         Path f = core.getResourceLoader().getConfigPath().resolve(cf);
         if (!Files.exists(f) || Files.isDirectory(f)) continue; // must not happen
+
         FileInfo info = confFileInfoCache.get(cf);
         long lastModified = 0;
         long size = 0;
@@ -785,13 +734,15 @@ public class ReplicationHandler extends RequestHandlerBase
         } catch (IOException e) {
           // proceed with zeroes for now, will probably error on checksum anyway
         }
+
         if (info == null || info.lastmodified != lastModified || info.fileMetaData.size != size) {
           if (checksum == null) checksum = new Adler32();
           info = new FileInfo(lastModified, cf, size, getCheckSum(checksum, f));
           confFileInfoCache.put(cf, info);
         }
+
         FileMetaData m = info.fileMetaData;
-        if (nameAndAlias.getVal(i) != null) m.alias = nameAndAlias.getVal(i);
+        if (aliasValue != null) m.alias = aliasValue;
         confFiles.add(m);
       }
     }
@@ -846,14 +797,6 @@ public class ReplicationHandler extends RequestHandlerBase
               executorStartTime
                   + TimeUnit.MILLISECONDS.convert(pollIntervalNs, TimeUnit.NANOSECONDS));
     return nextTime;
-  }
-
-  int getTimesReplicatedSinceStartup() {
-    return numTimesReplicated;
-  }
-
-  void setTimesReplicatedSinceStartup() {
-    numTimesReplicated++;
   }
 
   @Override
@@ -1091,7 +1034,7 @@ public class ReplicationHandler extends RequestHandlerBase
             follower.add("replicationStartTime", replicationStartTimeStamp.toString());
           }
           long elapsed = fetcher.getReplicationTimeElapsed();
-          follower.add("timeElapsed", String.valueOf(elapsed) + "s");
+          follower.add("timeElapsed", elapsed + "s");
 
           if (bytesDownloaded > 0)
             estimatedTimeRemaining =
@@ -1156,13 +1099,13 @@ public class ReplicationHandler extends RequestHandlerBase
     if (s == null || s.trim().length() == 0) return null;
     if (clzz == Date.class) {
       try {
-        Long l = Long.parseLong(s);
+        long l = Long.parseLong(s);
         return new Date(l).toString();
       } catch (NumberFormatException e) {
         return null;
       }
     } else if (clzz == List.class) {
-      String ss[] = s.split(",");
+      String[] ss = s.split(",");
       List<String> l = new ArrayList<>();
       for (String s1 : ss) {
         l.add(new Date(Long.parseLong(s1)).toString());
@@ -1258,7 +1201,7 @@ public class ReplicationHandler extends RequestHandlerBase
           try {
             log.debug("Polling for index modifications");
             markScheduledExecutionStart();
-            IndexFetchResult fetchResult = doFetch(null, false);
+            IndexFetchResult fetchResult = doFetch(SolrParams.of(), false);
             if (pollListener != null) pollListener.onComplete(core, fetchResult);
           } catch (Exception e) {
             log.error("Exception in fetching index", e);
@@ -1290,14 +1233,14 @@ public class ReplicationHandler extends RequestHandlerBase
     } else {
       replicationHandlerConfig.numberBackupsToKeep = 0;
     }
-    NamedList<?> follower = getObjectWithBackwardCompatibility(initArgs, "follower", "slave");
+    NamedList<?> follower = (NamedList<?>) initArgs.get("follower");
     boolean enableFollower = isEnabled(follower);
     if (enableFollower) {
       currentIndexFetcher = pollingIndexFetcher = new IndexFetcher(follower, this, core);
       setupPolling((String) follower.get(ReplicationAPIBase.POLL_INTERVAL));
       isFollower = true;
     }
-    NamedList<?> leader = getObjectWithBackwardCompatibility(initArgs, "leader", "master");
+    NamedList<?> leader = (NamedList<?>) initArgs.get("leader");
     boolean enableLeader = isEnabled(leader);
 
     if (enableLeader || (enableFollower && !currentIndexFetcher.fetchFromLeader)) {
@@ -1320,11 +1263,11 @@ public class ReplicationHandler extends RequestHandlerBase
     if (enableLeader) {
       includeConfFiles = (String) leader.get(CONF_FILES);
       if (includeConfFiles != null && includeConfFiles.trim().length() > 0) {
-        List<String> files = Arrays.asList(includeConfFiles.split(","));
+        String[] files = includeConfFiles.split(",");
         for (String file : files) {
           if (file.trim().length() == 0) continue;
           String[] strs = file.trim().split(":");
-          // if there is an alias add it or it is null
+          // if there is an alias add it, or it is null
           confFileNameAlias.add(strs[0], strs.length > 1 ? strs[1] : null);
         }
         log.info("Replication enabled for following config files: {}", includeConfFiles);
@@ -1395,7 +1338,7 @@ public class ReplicationHandler extends RequestHandlerBase
             }
           }
 
-          // ensure the writer is init'd so that we have a list of commit points
+          // ensure the writer is initialized so that we have a list of commit points
           RefCounted<IndexWriter> iw =
               core.getUpdateHandler().getSolrCoreState().getIndexWriter(core);
           iw.decref();
@@ -1547,7 +1490,7 @@ public class ReplicationHandler extends RequestHandlerBase
     return TimeUnit.MILLISECONDS.convert(readIntervalNs(interval), TimeUnit.NANOSECONDS);
   }
 
-  private Long readIntervalNs(String interval) {
+  public static Long readIntervalNs(String interval) {
     if (interval == null) return null;
     int result = 0;
     Matcher m = INTERVAL_PATTERN.matcher(interval.trim());
@@ -1577,27 +1520,14 @@ public class ReplicationHandler extends RequestHandlerBase
 
   public static final String LEADER_URL = "leaderUrl";
 
-  /**
-   * @deprecated Only used for backwards compatibility. Use {@link #LEADER_URL}
-   */
-  @Deprecated public static final String LEGACY_LEADER_URL = "masterUrl";
-
   public static final String FETCH_FROM_LEADER = "fetchFromLeader";
 
-  // in case of TLOG replica, if leaderVersion = zero, don't do commit
-  // otherwise updates from current tlog won't copied over properly to the new tlog, leading to data
-  // loss
-  // don't commit on leader version zero for PULL replicas as PULL should only get its index
-  // state from leader
+  // In case of TLOG replica, if leaderVersion = zero, don't do commit
+  // otherwise updates from current tlog won't be copied over properly to the new tlog,
+  // leading to data loss.
+  // Don't commit on leader version zero for PULL replicas as PULL should only get its index
+  // state from leader.
   public static final String SKIP_COMMIT_ON_LEADER_VERSION_ZERO = "skipCommitOnLeaderVersionZero";
-
-  /**
-   * @deprecated Only used for backwards compatibility. Use {@link
-   *     #SKIP_COMMIT_ON_LEADER_VERSION_ZERO}
-   */
-  @Deprecated
-  public static final String LEGACY_SKIP_COMMIT_ON_LEADER_VERSION_ZERO =
-      "skipCommitOnMasterVersionZero";
 
   public static final String MESSAGE = "message";
 
@@ -1637,8 +1567,6 @@ public class ReplicationHandler extends RequestHandlerBase
 
   public static final String ALIAS = "alias";
 
-  public static final String CONF_CHECKSUM = "confchecksum";
-
   public static final String CONF_FILES = "confFiles";
 
   public static final String REPLICATE_AFTER = "replicateAfter";
@@ -1662,7 +1590,7 @@ public class ReplicationHandler extends RequestHandlerBase
   /**
    * Boolean param for tests that can be specified when using {@link #CMD_FETCH_INDEX} to force the
    * current request to block until the fetch is complete. <b>NOTE:</b> This param is not advised
-   * for non-test code, since the duration of the fetch for non-trivial indexes will likeley cause
+   * for non-test code, since the duration of the fetch for non-trivial indexes will likely cause
    * the request to time out.
    *
    * @lucene.internal
